turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:17: error: identifier expected but integer literal found.
var rule:Array[Array[Array[Int]]] = T[U[V[6]]
                                          ^Turmite:18: error: ']' expected but ';' found.
var nbSteps:Int = 8342;
                      ^Turmite:48: error: ';' expected but 'def' found.
def init() {
^